--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,4 +1,5 @@
 @import '~react-perfect-scrollbar/dist/css/styles.css';
+@import '~react-toastify/dist/ReactToastify.min.css';
 @import './prismjs';
 
 * {
